--- a/makeup.css
+++ b/makeup.css
@@ -43,7 +43,7 @@
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-template-rows: repeat(3, 1fr);
     grid-gap: 10px;
-    /* justify-items: center; */
+    justify-items: center;
     }
     .photo-gallery img{
     width: 300px;
